--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "chroma-js": "^2.1.0",
+    "install": "^0.13.0",
+    "npm": "^6.14.4",
     "rc-slider": "^9.2.4",
     "react": "^16.13.1",
     "react-color": "^2.18.0",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
+    "react-material-ui-form-validator": "^2.0.10",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
