--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "chroma-js": "^2.1.0",
+    "emoji-mart": "^3.0.0",
     "install": "^0.13.0",
     "npm": "^6.14.4",
     "rc-slider": "^9.2.4",
